--- a/biblio.bib
+++ b/biblio.bib
@@ -2945,7 +2945,7 @@ publisher = {USENIX Association},
 @inproceedings{dimva2013sentinel,
       	authors = {Kaan Onarlioglu and Mustafa Battal and William Robertson and Engin Kirda},
       	title = {{Securing Legacy Firefox Extensions with SENTINEL}},
-      	booktitle = {{Conference on Detection of Intrusions and Malware & Vulnerability Assessment (DIMVA)}},
+      	booktitle = {{Conference on Detection of Intrusions and Malware and Vulnerability Assessment (DIMVA)}},
       	location = {{Berlin, DE}},
       	month = {7},
       	year = {2013}
