--- a/bubble.tex
+++ b/bubble.tex
@@ -518,57 +518,63 @@ Two architectures that take advantage of virtualisation technology to provide co
 \subsection{Heap-spraying defences} \label{cmnozzle}
 
 \paragraph{Nozzle} 
-Nozzle is the first countermeasure specifically designed against heap-spraying attacks to web browsers \cite{nozzle08tr}. It uses emulation techniques to detect the presence of malicious objects. This is achieved by the analysis of the contents of any object allocated by the Web browser. The countermeasure is in fact implemented at the memory allocator level. This has the benefit of protecting against a heap-spraying attack by any scripting language supported by the browser.
-Each block on the heap is disassembled and a control flow graph of the decoded instructions is built. A \texttt{NOP-shellcode} object may be easily detected by this approach because one basic block in the control flow graph will be reachable by several directions (other basic blocks). For each object on the heap a measure of the likelihood of landing within the same object is computed. This measure is called \texttt{attack surface area}. The surface area for the entire heap is given by the accumulation of the surface area of individual blocks. This metric reflects the overall heap \textit{health}. 
-This countermeasure is more compatible than DEP and would help to detect and report heap-spraying attacks by handling exceptions, without just crashing. This approach has although some limitations. Because Nozzle examines objects only at specific times, this may lead to the so called TOCTOU-vulnerability (Time-Of-Check-Time-Of-Use). This means that an attacker can allocate a benign object, wait for Nozzle to examine it, then change it to contain malicious content and trigger the attack. Moreover Nozzle examines only a subset of the heap, for performance reasons. But this approach will lead to a lower level of security. The performance overhead of Nozzle examining the whole heap is unacceptable.
-Another limitation of Nozzle comes from the assumption that a heap-spraying attack allocates a relatively small number of large objects. A design based on this assumption would not protect against a heap-spraying attack which allocates a large number of small objects which is known to have the same probability to succeed. 
+Nozzle is the first countermeasure specifically designed against heap-spraying attacks via web browsers \cite{nozzle08tr}. It uses emulation techniques to detect the presence of malicious objects. This is achieved by the analysis of the contents of any object allocated by the web browser. The countermeasure is in fact implemented at the memory allocator level. This has the benefit of protecting against a heap-spraying attack by any scripting language supported by the browser.
+Each block on the heap is disassembled and a control flow graph of the decoded instructions is built. A \texttt{NOP-shellcode} object may be easily detected because one basic block in the control flow graph will be reachable by several directions (other basic blocks). For each object on the heap a measure of the likelihood of landing within the same object is computed. This measure is called \texttt{attack surface area}. The surface area for the entire heap is given by the accumulation of the surface area of individual blocks. This metric reflects the overall heap \textit{health}. 
+This countermeasure is more compatible than DEP and would help to detect and report heap-spraying attacks by handling exceptions, without just crashing. This approach has although some limitations. Because Nozzle examines objects only at specific times, this may lead to the so called TOCTOU-vulnerability (Time-Of-Check-Time-Of-Use). This means that an attacker can allocate a benign object, wait for Nozzle to examine it, then change it to contain malicious content and trigger the attack. Moreover, Nozzle examines only a subset of the heap, due to performance reasons. But this approach will lead to a lower level of security. The performance overhead of Nozzle examining the whole heap is unacceptable for every day computing.
+Another limitation of Nozzle comes from the assumption that a heap-spraying attack allocates a relatively small number of large objects. A design based on this assumption would not protect against another type of heap-spraying attack which allocates a large number of small objects instead, which is known to have the same probability to succeed. 
+%OK
+
 
 \paragraph{Shellcode detection}
 Another countermeasure specifically designed against heap-spraying attacks to web browsers is proposed by \cite{EURECOM}. This countermeasure is based on the assumptions that (1) a heap-spraying attack may be conducted by a special crafted HTML page instrumented with Javascript and (2) Javascript strings are the only way to allocate contiguous data on the heap. Thus all strings allocated by the Javascript interpreter are monitored and checked for the presence of shellcode. All checks have to be performed before a vulnerability can be abused to change the execution control flow of the application. If the system detects the presence of shellcode, the execution of the script is stopped. Shellcode detection is performed by \emph{libemu}, a small library written in C that offers basic x86 emulation. Since \emph{libemu} uses a number of heuristics to discriminate random instructions from actual shellcode, false positives may still occur. Moreover an optimised version of the countermeasure that achieves accurate detection with no false positives is affected by a significant performance penalty of 170\%.
+%OK
  
 \subsection{Alternative countermeasures} \label{sul}
 
 \paragraph{Probabilistic countermeasures}
 Many countermeasures make use of randomness when protecting against attacks. Canary-based countermeasures \cite{Krennmair:2003:CLE,Robertson:2003:RTD} 
 %%Cowan:1998:SAA,Etoh:2000:PSS
-use a secret random number that is stored before an important memory location: if the random number has changed after some operations have been performed, then an attack has been detected. Memory-obfuscation countermeasures \cite{Bhatkar:2008:DSR,Cowan:2003:PPP} encrypt (usually with XOR) important memory locations or other information using random numbers.  Memory layout randomisers \cite{Bhatkar:2003:AOE,Bhatkar:2005:ETC,Xu:2003:TRR} 
+use a secret random number that is stored before an important memory location: if the random number has changed after some operations have been performed, then an attack has been detected. Memory-obfuscation countermeasures \cite{Bhatkar:2008:DSR,Cowan:2003:PPP} encrypt (usually with XOR) important memory locations or other information using random numbers.  The memory layout is usually randomised as in \cite{Bhatkar:2003:AOE,Bhatkar:2005:ETC,Xu:2003:TRR}, 
 %%Team:20xx:DPP,
-randomise the layout of memory: by loading the stack and heap at random addresses and by placing random gaps between objects. Instruction set randomisers \cite{Barrantes:2003:RIS}
-%%,Kc:2003:CCI
-encrypt the instructions while in memory and will decrypt them before execution. While these approaches are often efficient, they rely on keeping memory locations secret. However, programs that contain buffer overflows could also contain ``buffer overreads'' (e.g. a string which is copied via \emph{strncpy} but not explicitly null-terminated could leak information) or other vulnerabilities like format string vulnerabilities, which allow attackers to print out memory locations. Such memory leaking vulnerabilities could allow attackers to bypass this type of countermeasure. Another drawback of these countermeasures is that, while they can be effective against remote attackers, they are easier to bypass locally, because attackers could attempt brute force attacks on the secrets.
+by loading the stack and heap at random addresses and by placing random gaps between objects. 
+Another type of randomisation consists in encrypting the entire instruction set of an architecture \cite{Barrantes:2003:RIS}
+before fetching the instructions and decrypting them before they are executed. While these approaches are often efficient, they rely on keeping memory locations secret. Unfortunately, programs that contain buffer overflows could also be affected by  \emph{buffer overreads} vulnerabilities (e.g. a string which is copied via \emph{strncpy} but not explicitly null-terminated could leak information) or format string vulnerabilities, which allow attackers to print out memory locations. Such memory leaking vulnerabilities could allow attackers to bypass this type of countermeasure. Another drawback of these countermeasures is that, while they can be effective against remote attackers, they can be easily bypassed locally, via brute force attacks on the secret areas.
  
 \paragraph{DEP}
-Data Execution Prevention \cite{dep} is a countermeasure to prevent the execution of code in memory pages. It is implemented  either in software or hardware, via the NX bit. With DEP enabled, pages will be marked non-executable and this will prevent the attacker from executing shellcode injected on the stack or the heap of the application. If an application attempts to execute code from a page marked by DEP, an access violation exception will be raised. This will lead to a crash, if not properly handled.
-Unfortunately several applications attempt to execute code from memory pages. The deployment of DEP is less straightforward due to compatibility issues raised by several programs \cite{depdef}.
+Data Execution Prevention \cite{dep} is a countermeasure designed to prevent the execution of code in memory pages. It is implemented  either in software or hardware, via the NX bit. With DEP enabled, pages will be marked non-executable and this will prevent the attacker from executing shellcode injected on the stack or the heap of the application. If an application attempts to execute code from a page marked by DEP, an access violation exception will be raised. This will lead to a crash, if not properly handled. While the aforementioned hardware-based countermeasure is recognised as effective against code injection attacks, its main limitation consists in the fact that several applications attempt to execute code from memory pages. 
+Due to these types of compatibility issues, the deployment of DEP is less straightforward than it should be \cite{depdef}.
 
 \paragraph{Separation and replication of information}
-Countermeasures that rely on separation or replication of information will try to replicate valuable control-flow information \cite{Younan:2006:EPA,Younan:2006:EPA2, Chiueh:2001:RCT, Vendicator:20xx:DS} or will separate this information from regular data. This makes it harder for an attacker to overwrite this information using an overflow. Some countermeasures will simply copy the return address from the stack to a separate stack and will compare it to or replace the return addresses on the regular stack before returning from a function. These countermeasures are easily bypassed using indirect pointer overwriting where an attacker overwrites a different memory location instead of the return address by using a pointer on the stack.  More advanced techniques try to separate all control-flow data (like return addresses and pointers) from regular data, making it harder for an attacker to use an overflow to overwrite this type of data.
+Countermeasures that rely on separation or replication of information will try to replicate valuable control-flow information \cite{Younan:2006:EPA,Younan:2006:EPA2, Chiueh:2001:RCT, Vendicator:20xx:DS} or will separate this information from regular data. This makes it harder for an attacker to overwrite these critical memory areas using an overflow. Some countermeasures will simply copy the return address from the stack to a separate stack and will compare it to or replace the return addresses on the regular stack before returning from a function. These countermeasures are easily bypassed using indirect pointer overwriting by which an attacker overwrites a different memory location instead of the return address exploiting a pointer from the stack. More advanced techniques try to separate all control-flow data (like return addresses and pointers) from regular data, making it harder for an attacker to use an overflow to overwrite this type of data.
 While these techniques can efficiently protect against buffer overflows that try to overwrite control-flow information, they do not protect against attacks where an attacker controls an integer that is used as an offset from a pointer, nor do they protect against non-control-data attacks.
+%OK
 
-\paragraph{Execution monitors}
-The countermeasures described below are capable of monitoring the execution of a program and preventing the transfer of control-flow which could be unsafe. 
 
-Program shepherding \cite{Kiriansky:2002:SEP} is a technique that monitors the execution of a program and will disallow control-flow transfers that are not considered safe. Such a control flow transfer occurs when e.g., a \emph{call} or \emph{ret} instruction is executed. 
-An example of a use for shepherding is to enforce return instructions to only return to the instruction after the call site. The proposed implementation of this countermeasure is done using a runtime binary interpreter. As a result, the performance impact of this countermeasure is significant for some programs, but acceptable for others.
-Control-flow integrity \cite{Abadi:2005:CFI} determines a program's control flow graph beforehand and ensures that the program adheres to it. It does this by assigning  a unique ID to each possible control flow destination of a control flow transfer. Before transferring control flow to such a destination, the ID of the destination is compared to the expected ID, and if they are equal, the program proceeds as normal.  This approach, while strong and in the same efficiency range as our approach, does not protect against non-control data attacks.
+%\paragraph{Execution monitors}
+%The countermeasures described below are capable of monitoring the execution of a program and preventing the transfer of control-flow which could be unsafe. 
+%
+%Program shepherding \cite{Kiriansky:2002:SEP} is a technique that monitors the execution of a program and will disallow control-flow transfers that are not considered safe. Such a control flow transfer occurs when e.g., a \emph{call} or \emph{ret} instruction is executed. 
+%An example of a use for shepherding is to enforce return instructions to only return to the instruction after the call site. The proposed implementation of this countermeasure is done using a runtime binary interpreter. As a result, the performance impact of this countermeasure is significant for some programs, but acceptable for others.
+%Control-flow integrity \cite{Abadi:2005:CFI} determines a program's control flow graph beforehand and ensures that the program adheres to it. It does this by assigning  a unique ID to each possible control flow destination of a control flow transfer. Before transferring control flow to such a destination, the ID of the destination is compared to the expected ID, and if they are equal, the program proceeds as normal.  This approach, while strong and in the same efficiency range as our approach, does not protect against non-control data attacks.
 
 \paragraph{Virtual Browser}
 A work that borrows the concepts of virtualisation technology and applies them to the development of secure web browsers is provided in \cite{virtualbrowser}. Virtual Browser is a browser-level virtualised environment that executes third party Javascript code in isolation from the rest of the system, namely other components of the web browser itself and the host system. The isolated components can still communicate with each other through data flows that have been carefully examined with security in mind. 
 The idea of Virtual Browser is very similar to that of virtual machines. It provides its own HTML and CSS parsers and a Javascript interpreter. Therefore, untrusted Javascript code is parsed and executed within the isolated environment, preventing the exploitation of bugs in the main Javascript interpreter of the browser.
 For the same reason, trusted Javascript can execute within the native Javascript engine, improving the overall performance of the countermeasure. The performance overhead is comparable to the Microsoft Web Sandbox, but the degree of security is higher and a more complete Javascript language is supported.
 An important feature that makes Virtual Browser readily deployable is that it is written in a language that is supported by the native browser (a Javascript implementation is provided). Therefore, no modification to the browser codebase is required. Virtual Browser provides isolation of the Javascript interpreter, leaving all other means to attack web browsers unprotected. Although a direct comparison with Web Sandbox shows that Virtual Browser outperforms it in some cases, the overhead compared to web browsers running natively is not negligible. 
-
+%OK
 
 
 \subsection{Virtualisation-based countermeasures}\label{virtbased}
 \paragraph{QubesOS}
-The development of a virtualisation-based Linux distribution like QubesOS \cite{qubesos} has been driven by the inability of traditional operating systems to provide isolation among different applications running within the same machine.  This is the main reason for which current operating systems are usually not capable of protecting other user's applications and data from being compromised when an application, for instance the web browser has been attacked by a malicious website. This concept can be extended to other components of the operating system. Therefore, exploiting a bug in the network stack can affect the security of other applications and their data, without the operating system to notice and defend potential targets.
-Virtualisation is the chief technology QubesOS is based on, due to its security isolation properties. The main idea of QubesOS is to execute a number of guests, also called disposable virtual machines, in which running applications that need to stay isolated during their lifetime. The entire system is based on disposable virtual machines such as the social virtual machine, in which applications like the email client or any other web social service will be executed, the shopping virtual machine, used for those applications to purchase goods from the Internet with a credit card, or the corporate virtual machine, where the corporate email client or VPN connections will take place. 
+The development of a virtualisation-based Linux distribution like QubesOS \cite{qubesos} has been driven by the inability of traditional operating systems to provide isolation among different applications running within the same machine.  This is the main reason for which current operating systems are usually not capable of protecting other user's applications and data from being compromised when an application, for instance the web browser, has been attacked by a malicious website. 
+This concept has been extended to the other components of the operating system. Exploiting a bug in the network stack can affect the security of other applications and their data, without the operating system to notice and defend potential targets.
+Virtualisation is the chief technology QubesOS is based on, due to its security isolation properties. The main idea of QubesOS is to execute a number of guests, also called \emph{disposable virtual machines}, in which applications that need to stay isolated during their lifetime are executed. The entire system is based on disposable virtual machines such as the social virtual machine, in which applications like the email client or any other web social service will be executed, the shopping virtual machine, used for those applications to purchase goods from the Internet with a credit card, or the corporate virtual machine, where the corporate email client or VPN connections will take place. 
 If one of the aforementioned virtual machines gets compromised, applications and data running in the other ones will stay isolated and their code untampered.
 Disposable virtual machines are not only used for regular applications but also for system services such as the network system, the graphical or the storage subsystems. A bug in one of those subsystems will stay isolated for the same reasons explained above.
 QubesOS is a hybrid architecture that takes the concept of isolation, typical of microkernel systems, in which device drivers are not part of the core kernel and run in unprivileged mode, and the flexibility of monolithic systems.
 The challenging task of QubesOS consists in allowing virtual machines to share data among each other and still maintain the overall system safe. For instance, those applications that are being run in different virtual machines might need their data to be shared; the web browser isolated in the social virtual machine will certainly use the network system, provided by the network virtual machine in which the NIC driver, the TCP/IP stack and 802.11 stack are running; most of the applications running in their own virtual machines will need the graphical subsystem for basic human-computer interaction, provided by the GUI virtual machine. 
-All the required inter-connectivity is provided by the Xen hypervisor that takes advantage of hardware supported virtualisation technology. Despite the high demand in terms of hardware resources and the performance impact that depends on the number of virtual machines running simultaneously, QubesOS is one of the few systems that guarantees strong isolation at application level.
+All the required inter-connectivity is provided by the Xen hypervisor that takes advantage of hardware supported virtualisation technology. Despite the high demand in terms of hardware resources and the performance impact that depends on the number of virtual machines running simultaneously, QubesOS is one of the few systems that can guarantee strong isolation at application level.
 
 \paragraph{Invincea}
 A commercial product originally designed to isolate web browsers in virtual execution environments within a virtualisation platform is presented in \cite{invincea}.
