--- a/hyperforce.tex
+++ b/hyperforce.tex
@@ -388,7 +388,7 @@ experimental evaluation given, a comparison with our solution is not feasible.
 \paragraph{SADE}
 Similarly, work on SADE~\cite{chiueh:sade} by Chiueh et al. uses VMWare's ESX server 
 API to inject and execute code in a guest OS so as to disable and remove a previously 
-detected malware infection from that guest. In difference to the HyperForce approach, 
+detected malware infection from that guest. In difference to our approach, 
 the agent code in SADE is not protected from malicious interference on the guest. 
 Chiueh et al. argue that on-demand injection leaves a relatively short time span for 
 such interference. SADE is used by a virtual appliance that implements out-of-guest 
@@ -396,20 +396,20 @@ monitoring of VMs' memory, scanning for malware signatures.
 The paper presents experimental data on the code injection process but does not discuss 
 the overhead implied by mapping memory pages between the virtual appliance and the VMs. 
 We expect in-guest memory inspection, as implemented by our kernel integrity detection 
-method in HyperForce, to outperform SADE.
+method, to outperform SADE.
 
 
 \paragraph{Kernel heap buffer overflow monitoring}
 The primary goal of Kruiser, a security countermeasure explained in \cite{heapoverflow}, consists in detecting heap based buffer overflows in kernel space. The authors argue that those countermeasures that try to detect a buffer overflow before any write operation are usually affected by considerable performance overhead. As a consequence, the monitored process will slow down consistently whenever the monitoring system is under heavy load. Other systems perform detection occasionally, for instance whenever the buffer to be protected is deallocated. This strategy usually allows the attacker to compromise the system relatively easily, due to the large time window between corruption and detection. If a buffer is deallocated much later its corruption has occurred there are no viable ways for the countermeasure to detect and interrupt any malicious intent coming from that buffer. Finally, approaches that rely on special hardware are effective but less practical for wide deployment, as we discuss in Section \ref{hardware}.
 
-Therefore, due to the challenging nature of protecting operating system kernels, the authors take advantage of virtualisation technology.  
+Due to the challenging nature of protecting operating system kernels, the authors take advantage of virtualisation technology.  
 The high-level idea of Kruiser consists in placing canaries into kernel heap buffers and lately check their integrity. When a canary is found to be tampered, an alarm, indicating the detection of an overflow, is raised.
 In order to guarantee isolation between the monitoring and target systems, a separate process, running concurrently with the kernel, performs the checking of the canaries. 
-While canaries are attached at the end of each heap buffer via an in-guest interposition mechanism, the task of  checking their integrity is decoupled and it is performed by a process running in a separate virtual machine.  
+While canaries are attached at the end of each heap buffer via an in-guest interposition mechanism, the task of checking their integrity is decoupled and it is performed by a process running in a separate virtual machine.  
 This is an essential requirement to strengthen self protection.
 
-We argue that using the Hyperforce framework in such a scenario would allow the execution of the integrity checking process inside the guest, with native performance and without the requirements of allocating resources for any additional virtual machine. 
-The hypervisor can be instructed from the trusted module about the checking frequency and the physical memory address of the protected area where canaries will be stored at runtime. The non-maskable interrupt mechanism of Hyperforce, triggered by the virtual PCI device installed within the guest, will ensure that there are no chances for the attacker to interfere with the security measure. 
+We argue that using our framework in such a scenario would allow the execution of the integrity checking process inside the guest, with native performance and without the requirements of allocating resources for any additional virtual machine. 
+The hypervisor can be instrumented from the trusted module about the checking frequency and the physical memory address of the protected area where canaries will be stored at runtime. The non-maskable interrupt mechanism of Hyperforce, triggered by the virtual PCI device installed within the guest, will ensure that there are no chances for the attacker to interfere with the security measure. 
 
 As a result, Kruiser implemented in Hyperforce would become a security countermeasure that executes entirely in the target kernel, still keeping the same degree of security of the equivalent out-of-guest approach.
 
@@ -418,14 +418,14 @@ As a result, Kruiser implemented in Hyperforce would become a security counterme
 \paragraph{Flicker}
 An infrastructure that allows the execution of security critical code, in complete isolation from the rest of the system is described in \cite{flicker}. In order to guarantee such isolation, Flicker takes advantage of hardware support such as AMD SVM or the equivalent Intel Trusted eXecution Technology. These chips allow the launch of a virtual machine monitor or a security kernel at any time, still protecting their code from malicious software.
 Contrarily to hypervisor's development, that even in the case of minimal hypervisors, usually adds thousands of lines of code to the trusted computing base (TCB), the TCB of Flicker is as small as 250 lines of code. The programmer can add only the code that implements her particular application in a bottom-up approach. 
-One of the most advantageous peculiarities of Flicker consists in the fact that isolation and code attestation can be guaranteed even in the presence of compromised BIOS, DMA devices and the operating system. 
-When the processor receives an init instruction, it disables DMA, system interrupts and debugging access, enters at 32-bit protected mode and jumps to the provided entry point to start the execution of the isolated application.
-There is no possibility for others software executing before Flicker to monitor or interfere with Flicker's code.
+One of the most advantageous peculiarities of Flicker consists in the fact that isolation and code attestation can be guaranteed even in the presence of compromised BIOS, DMA devices and the operating system itself. 
+When the processor receives an \emph{init} instruction, it disables DMA, system interrupts and debugging access, enters at 32-bit protected mode and jumps to the provided entry point in order to start the execution of the isolated application.
+There is no possibility for other software executing before Flicker to monitor or interfere with Flicker's code.
 An example that sheds light on the potential of the aforementioned isolation property consists in a piece of code that handles a user's password, that will stay isolated from all other software running on the same machine. In the same scenario, the hardware can guarantee that the secrecy of the password has been preserved.  
 The authors implemented a rootkit detector in the Flicker architecture. In this other scenario, the hardware can guarantee that no other software, the rootkit included, could tamper with the detection code. 
 Any piece of code that needs to be executed in isolation should be included in a Piece of Application Logic (PAL). A Flicker session will then be initialised to begin execution of the Secure Loader Block (SLB). At the end of PAL's execution, a cleanup procedure will erase its secret values and control will return to the operating system or other untrusted components. 
 Flicker offers strong security and isolation properties. But current hardware performance offered by commodity processors is not enough to consider this architecture for every day computing. 
-
+%OK
 
 
 \paragraph{TrustVisor}
@@ -438,29 +438,29 @@ The TrustVisor architecture is implemented taking advantage of hardware virtuali
 PALs are isolated from each other with the same memory virtualisation mechanisms.
 The execution of PALs follows a registration event that must be requested explicitely by the developer. Both registration and unregistration are implemented by using a hypercall that is intercepted and handled directly by TrustVisor.
 The performance penalty of TrustVisor is much smaller than the one of Flicker and the security guarantees are comparable. The code base, around 6000 lines of code, is small enough to verify TrustVisor implementation using software model checking methods, that is what authors plan to achieve in the future.
-
+%OK
 
 
 \paragraph{Fides}
 The goal of Fides \cite{fides} is to protect trusted modules from malware capable of exploiting vulnerabilities in the surrounding components of an operating system. The isolation properties of Fides make a vulnerable module exploitable only if other modules explicitly place trust in the former. In all other cases in which, for instance an attacker introduces malicious modules that are disconnected from the rest of the system, as is the case of rootkits, there are no viable ways to compromise the entire operating system. 
 Fides combines a run-time security architecture that protects fine-grained software modules within a commodity operating system and a compiler that compiles modules written in the C language to exploit the security capabilities of the architecture on which they will execute.
 The software components that execute in isolation from the rest of the system are called Self Protecting Modules (SPM). They are basically a chunk of memory, formed by a secret section, that contains the module's sensitive data and a public section that contains information for which only integrity must be guaranteed. 
-The three main components that form Fides are: the legacy kernel with its applications that run without interruption and intervention of the security system; the hypervisor that manages the hardware and provides coarse grained memory isolation of the legacy and the secure virtual machines; the security kernel that manages the isolated software entities (SPM). The legacy kernel and the security kernel execute respectively in two virtual machines. Isolation and scheduling of the virtual machines are performed by the hypervisor, as in a regular virtualisation system.
+The three main components that form Fides are: the legacy kernel with its applications that run without interruption and intervention of the security system; the hypervisor that manages the hardware and provides coarse grained memory isolation of the legacy and the secure virtual machines; the security kernel that manages the isolated software entities (SPM). The legacy kernel and the security kernel execute respectively in two separated virtual machines. Isolation and scheduling of the virtual machines are performed by the hypervisor, as in a regular virtualisation system.
 The isolation among SPMs is guaranteed by the security kernel. When a module is invoked, the security kernel receives a request in which the virtual address of the entry point of the module is specified. This address is translated to its physical equivalent with the aid of Nested Paging (NPT) in the legacy virtual machine.
 According to the Fides architecture, when the processor is executing outside the boundaries of the SPM, it has limited access to the module's memory. Also the destruction of the SPM follows a protocol that will leave no trace of its secret values to other components. 
-SPM modules can be written in C and compiled with a modified version of LLVM, that the authors provide. The aforementioned compiler ensures that each module implements its own stack, that registers and other sensitive areas are cleared upon returning to unprotected memory, that function pointers point to unprotected memory or to a function within an SPM correctly signed, and other security measures to execute in the Fides architecture.
+%SPM modules can be written in C and compiled with a modified version of LLVM, that the authors provide. The aforementioned compiler ensures that each module implements its own stack, that registers and other sensitive areas are cleared upon returning to unprotected memory, that function pointers point to unprotected memory or to a function within an SPM correctly signed, and other security measures to execute in the Fides architecture.
 The overall performance impact has been measured to 3.22\%, but for applications that make heavy usage of SPMs it can grow up to 14\%.
-The abilities of Fides such as confidentiality and integrity of module data, authentication and secure communication between modules, makes this architecture a suitable solution for high security environments.
+The abilities of Fides such as confidentiality and integrity of module data, authentication and secure communication between modules, makes this architecture a suitable solution only for high security environments.
 
 
-\paragraph{P-maps}
-The observations of the authors of P-MAPS \cite{pmaps} consist in the fact that stealthy malware can easily take advantage of the complexity of commodity operating systems. Moreover anti malware signature-based systems do not sufficiently protect against new malware, since they can recognise only known signatures. P-MAPS is a processor-measured service layer that reduces the trusted computing base of the target system in a dynamic way. This in turn improves the runtime security of user's applications without interrupting the regular execution of the operating system. P-MAPS has been designed to minimise its footprint so that it can be considered to protect mobile platforms, in which hardware and battery life are limited resources.
-Moreover, according to P-MAPS authors, the existing programming model should not be changed, low performance impact should be guaranteed when protection is active and there might be the co-existence with other hardware-based security countermeasures.
-The threat vector that the authors of P-MAPS address include internet downloads, an important source of malicious software downloaded in the form of system utilities, video codecs, etc, buffer overflows, still an effective and common practice to trigger attacks, network based infections such as via instant messages, peer-to-peer applications or emails. The type of attacks that can be prevented by P-MAPS are code tampering, unauthorised data access, screen scraping, key logging, man-in-the-middle, Denial Of Service, to name a few.
-From a hardware view point, P-MAPS takes advantage of the virtualisation capabilities of Intel processors and Intel TXT.
-The architecture of P-MAPS is straightforward. P-MAPS core executes in the highest privilege level mode (VMX root) by which hardware separation from the target application is guaranteed. The P-MAPS core isolates the program's memory from other software executing on the platform, including the operating system kernel. Moreover in this architecture only code that is stored in the measured application pages can access application data and the circumvention of a function entry point exposed by a shared library is prohibited. 
-The platform starts with a commodity operating system running directly on physical hardware. As the P-MAPS protected application is launched, the P-MAPS core is loaded, measured and installed by the processor. Intel TXT technology is used to launch a trusted software environment at any time without platform reset (this is called late launch). At this point the application starts in untrusted mode and, once measured and protected by the P-MAPS core it executes in protected mode. The operating system executes in VMX-non root mode, as a guest. When the application terminates the P-MAPS core is uninstalled and the operating system is executed back on physical hardware.
-Although all the security and isolation requirements are fulfilled within the P-MAPS architecture, switching between the two environments has a large performance impact. 
+%\paragraph{P-maps}
+%The observations of the authors of P-MAPS \cite{pmaps} consist in the fact that stealthy malware can easily take advantage of the complexity of commodity operating systems. Moreover anti malware signature-based systems do not sufficiently protect against new malware, since they can recognise only known signatures. P-MAPS is a processor-measured service layer that reduces the trusted computing base of the target system in a dynamic way. This in turn improves the runtime security of user's applications without interrupting the regular execution of the operating system. P-MAPS has been designed to minimise its footprint so that it can be considered to protect mobile platforms, in which hardware and battery life are limited resources.
+%Moreover, according to P-MAPS authors, the existing programming model should not be changed, low performance impact should be guaranteed when protection is active and there might be the co-existence with other hardware-based security countermeasures.
+%The threat vector that the authors of P-MAPS address include internet downloads, an important source of malicious software downloaded in the form of system utilities, video codecs, etc, buffer overflows, still an effective and common practice to trigger attacks, network based infections such as via instant messages, peer-to-peer applications or emails. The type of attacks that can be prevented by P-MAPS are code tampering, unauthorised data access, screen scraping, key logging, man-in-the-middle, Denial Of Service, to name a few.
+%From a hardware view point, P-MAPS takes advantage of the virtualisation capabilities of Intel processors and Intel TXT.
+%The architecture of P-MAPS is straightforward. P-MAPS core executes in the highest privilege level mode (VMX root) by which hardware separation from the target application is guaranteed. The P-MAPS core isolates the program's memory from other software executing on the platform, including the operating system kernel. Moreover in this architecture only code that is stored in the measured application pages can access application data and the circumvention of a function entry point exposed by a shared library is prohibited. 
+%The platform starts with a commodity operating system running directly on physical hardware. As the P-MAPS protected application is launched, the P-MAPS core is loaded, measured and installed by the processor. Intel TXT technology is used to launch a trusted software environment at any time without platform reset (this is called late launch). At this point the application starts in untrusted mode and, once measured and protected by the P-MAPS core it executes in protected mode. The operating system executes in VMX-non root mode, as a guest. When the application terminates the P-MAPS core is uninstalled and the operating system is executed back on physical hardware.
+%Although all the security and isolation requirements are fulfilled within the P-MAPS architecture, switching between the two environments has a large performance impact. 
 
 
 %\paragraph{Integrity verification architecture (IVA)} \label{IVA}
@@ -486,7 +486,7 @@ The technique used to formally verifying the microkernel is interactive, namely 
 Each unit of proof has a set of preconditions that must hold prior to execution and a set of post-conditions that must hold afterwards. The level of complexity depends on the statement being verified. Strong simplifications are required to lower the difficulty of the verification process. Many of them do not apply to operating systems that are commonly used.
 Proofs about concurrent systems are extremely hard. The authors do not consider verification of their kernel executing on multiprocessor systems. Moreover the complexity of interrupts, in the form of non-deterministic execution of handlers and preemption, is \emph{solved} by disabling interrupts most of the time except in a small number of interrupt points. Although exceptions occur synchronously, their effects are similar to the ones of interrupts. Exceptions are avoided completely in the verification of seL4. 
 Due to the aforementioned oversimplifications, it is hard to believe that commodity operating systems that  executes on architectures like x86, will be formally verified soon.
-   
+%OK   
 
 
 \paragraph{Hyper-V}
@@ -497,24 +497,25 @@ An interesting stratagem to tackle with the problem of verifying programs that d
 The verification chain consists in translating the code with annotations into the Boogie language, then the Boogie tool generates the verification conditions to be passed to the theorem prover.
 The model of the processor core is entirely implemented with ghost functions. Specific ghost functions specify the effects of executing single x64 instructions.  The aforementioned model is used to provide verification of assembly code and to prove that Hyper-V simulates x64 instructions correctly for the guest operating systems.
 Despite the relatively small codebase size of Hyper-V and the expected complexity of the verification process, the authors argue that several hundred functions have been verified and that the VCC-based approach is powerful enough to verify them all.
+%OK
 
 %The Hypervisor is part of a released product with very low defect density. Therefore, we did not expect to find many bugs in the code, and indeed less than a handful have been found during the verification process. All of them are very unlikely to let the Hy- pervisor fail in practical operation. 
 
-\paragraph{Verification of a small hypervisor}
-A work that follows to the verification of Hyper-V is presented in \cite{autoverification}. It describes the verification of a small hypervisor using VCC modeling of software-hardware interactions and simulation proofs in first-order logic. The hypervisor is a simple piece of software that simulates VAMP, a simple 32-bit RISC hardware architecture with 44 instructions and two privilege levels. In the overall modeling, single-level address translations without TLB and interrupt handling are considered. The guest operating systems are always run on the host in user mode, regardless of the mode the guests think to be executing in. This gives full control over the guests and any privilege operation can be trapped safely.
-The overall work is composed by the VAMP specification and simulation, the hypervisor implementation and system programs. The authors addressed extensions both on the software side, in the form of preemptive kernels and software parallelism, and on the hardware side, in the form of multi-core systems, hardware buffers like the TLB and devices. Part of these extensions are ongoing work.
+%\paragraph{Verification of a small hypervisor}
+%A work that follows to the verification of Hyper-V is presented in \cite{autoverification}. It describes the verification of a small hypervisor using VCC modeling of software-hardware interactions and simulation proofs in first-order logic. The hypervisor is a simple piece of software that simulates VAMP, a simple 32-bit RISC hardware architecture with 44 instructions and two privilege levels. In the overall modeling, single-level address translations without TLB and interrupt handling are considered. The guest operating systems are always run on the host in user mode, regardless of the mode the guests think to be executing in. This gives full control over the guests and any privilege operation can be trapped safely.
+%The overall work is composed by the VAMP specification and simulation, the hypervisor implementation and system programs. The authors addressed extensions both on the software side, in the form of preemptive kernels and software parallelism, and on the hardware side, in the form of multi-core systems, hardware buffers like the TLB and devices. Part of these extensions are ongoing work.
 
 
 \paragraph{Xenon}
-A more recent attempt to formally verify a widely used hypervisor like Xen \cite{xen} is Xenon \cite{xenon}. In the aforementioned work a formal security policy model is defined, starting from the original version of the Xen hypervisor. The authors argue they provide a robust information flow control, tamper-resistance and self- protection of the virtual machines (called execution environments) running on top of their hypervisor. 
-Their basic approach consists in confining each user community in its own execution environment and limiting the information flow between two environments to a restricted form of replication. Namely, an execution environment that is reading data from another environment, will get access to a local copy of the data.
+A more recent attempt to formally verify a widely used hypervisor like Xen \cite{xen} is Xenon \cite{xenon}. In the aforementioned work, a formal security policy model is defined, starting from the original version of the Xen hypervisor. The authors argue they provide a robust information flow control, tamper-resistance and self-protection of the virtual machines (called execution environments) running on top of their hypervisor. 
+Their basic approach consists in confining each user community in its own execution environment and limiting the information flow between two environments to a restricted form of replication. Namely, an execution environment that is reading data from another environment, will only get access to a local copy of the data.
 The policy that allows or denies information flow between two execution environments is called \emph{security domain lattice}. 
-The Xenon formal security model is written in CSP, an algebra to model non-interference and other trace-based information flow security policies. Moreover, CSP is well suited for reasoning about communication patterns between multiple threads of computation. These patterns are defined as sets of traces of instantaneous events and their duration is not modelled. 
+The Xenon formal security model is written in CSP, an algebra used to model non-interference and other trace-based information flow security policies. Moreover, CSP is well suited for reasoning about communication patterns between multiple threads of computation. These patterns are defined as sets of traces of instantaneous events and their duration is not modelled. 
 The Xenon model has been decomposed in subsystems that are modelled separately. Three subsystems have been identified, namely the boundary controller, the guest process and the virtual machine monitor process. The complete model that results from the parallel combination of the guest and the virtual machine monitor is deadlock free.
 Some peculiarities of the Xenon model consist in the fact that hypercalls, interrupts, traps, privileged and unprivileged instructions are considered Xenon events. Moreover the virtual machine monitor interface provides data structures such as virtual memory, virtual machine control structures (VMSC) and device driver front ends the effects of which can be mapped as Xenon events.
 Processes are used to model data structures, as a conventional CSP technique. When data have been transformed into CSP processes, the overall complexity of the verification process is reduced because it is possible to interchangeably refer to the interface data structures as though they were processes.
 Although the formal model does not support non-deterministic interrupts, a simplification represents them as signal events that arise deterministically within the virtual machine monitor. 
-Due to the structure of the policy model that results close to the structure of an implementation, the authors of Xenon argue that they will implement it on 64-bit x86 architecture.
+Due to the structure of the policy model that results close to the structure of an implementation, the authors of Xenon argue that they will implement it on the 64-bit x86 architecture.
 
 
 
