--- a/introduction.tex
+++ b/introduction.tex
@@ -69,7 +69,7 @@ Even a software bug in the kernel can be exploited to inject and execute malicio
 
 
 \paragraph{Attacks through web browsers}
-In order to provide better web experience, modern web browsers are supported by a richer environment and more complex software architecture. It is common to extend the functionality of modern web browsers with plug-ins or script language engines that interact via an API. This higher complexity has also led to numerous security problems \cite{dimva2013sentineli, cve2013}. Moreover, the browser is often written in unsafe languages for performance reasons. This exposes it to the memory corruption vulnerabilities that can occur in programs written in these languages, such as buffer overflows and dangling pointer references. The presence of interpreters, plugins and extensions that can easily be embedded to the core of the browser made these environments an appealing target for the most recent attacks \cite{heapspray, iespray, safarispray, cve2013}.
+In order to provide better web experience, modern web browsers are supported by a richer environment and more complex software architecture. It is common to extend the functionality of modern web browsers with plug-ins or script language engines that interact via an API. This higher complexity has also led to numerous security problems \cite{dimva2013sentinel, cve2013}. Moreover, the browser is often written in unsafe languages for performance reasons. This exposes it to the memory corruption vulnerabilities that can occur in programs written in these languages, such as buffer overflows and dangling pointer references. The presence of interpreters, plugins and extensions that can easily be embedded to the core of the browser made these environments an appealing target for the most recent attacks \cite{heapspray, iespray, safarispray, cve2013}.
 
 
 \section{Contributions}
