--- a/thesis.tex
+++ b/thesis.tex
@@ -7,11 +7,11 @@
 
 \begin{document}			
 
-\include{Cover}
+%\include{Cover}
 
 % preface 
 \pagestyle{empty}
-\include{thanks}
+\include{ack}        % acknowledgements
 \newpage
 \include{ZjefKobe}
 
@@ -30,7 +30,7 @@
 \selectlanguage{english}
 
 
-\include{ack}
+%\include{ack}
 \include{introduction}
 \include{virtualization}
 
@@ -55,9 +55,3 @@
 \include{CV}
 
 \end{document}
-
-
-%%% Local Variables: 
-%%% mode: latex
-%%% TeX-master: t
-%%% End: 
