--- a/Cover.tex
+++ b/Cover.tex
@@ -8,9 +8,9 @@
 \begin{document}
 \degree{INF}
 
-\monthyear{July 2013}
+\monthyear{September 2013}
 
-\title{Virtualisation-based countermeasures within runtime software systems}
+\title{Virtualisation-based security countermeasures in software runtime systems}
 \sidetitle{}
 
 \graduate{Francesco GADALETA}
@@ -56,8 +56,8 @@ any form by print, photoprint, microfilm or any other means without
 written permission from the publisher.
 
 \begin{flushleft}
-D/2006/7515/78\\
-ISBN 90--5682--744--8\\
+D/2013/7515/100\\
+ISBN 978-94-6018-714-8\\
 \end{flushleft}
 
 %\extracoverpage{%
